--- a/AdminHome.html
+++ b/AdminHome.html
@@ -125,7 +125,7 @@
               <p>15 <span><i class="fas fa-solid fa-eye"></i></span> </p> 
               <p>15 <span><i class="fas fa-solid fa-shekel-sign"></i></span></p>
                 <p style="color: red
-                ;"><a>ازالة</a></p>
+                ;"><button>ازالة</button></p>
     
             </div>
           </div>
@@ -138,7 +138,7 @@
               <p>15 <span><i class="fas fa-solid fa-eye"></i></span> </p> 
               <p>15 <span><i class="fas fa-solid fa-shekel-sign"></i></span></p>
                 <p style="color: red
-                ;"><a>ازالة</a></p>
+                ;"><button>ازالة</button></p>
             </div>
           </div>
         </div>
@@ -150,7 +150,7 @@
               <p>15 <span><i class="fas fa-solid fa-eye"></i></span> </p> 
               <p>15 <span><i class="fas fa-solid fa-shekel-sign"></i></span></p>
                 <p style="color: red
-                ;"><a>ازالة</a></p>
+                ;"><button>ازالة</button></p>
             </div>
           </div>
         </div>
@@ -162,7 +162,7 @@
               <p>15 <span><i class="fas fa-solid fa-eye"></i></span> </p> 
               <p>15 <span><i class="fas fa-solid fa-shekel-sign"></i></span></p>
                 <p style="color: red
-                ;"><a>ازالة</a></p>
+                ;"><button>ازالة</button></p>
             </div>
           </div>
         </div>
@@ -174,7 +174,7 @@
                 <p>15 <span><i class="fas fa-solid fa-eye"></i></span> </p> 
                 <p>15 <span><i class="fas fa-solid fa-shekel-sign"></i></span></p>
                   <p style="color: red
-                  ;"><a>ازالة</a></p>
+                  ;"><button>ازالة</button></p>
              </div>
             </div>
           </div>
@@ -186,7 +186,7 @@
                 <p>15 <span><i class="fas fa-solid fa-eye"></i></span> </p> 
                 <p>15 <span><i class="fas fa-solid fa-shekel-sign"></i></span></p>
                   <p style="color: red
-                  ;"><a>ازالة</a></p>
+                  ;"><button>ازالة</button></p>
             </div>
             </div>
           </div>
@@ -198,7 +198,7 @@
                 <p>15 <span><i class="fas fa-solid fa-eye"></i></span> </p> 
               <p>15 <span><i class="fas fa-solid fa-shekel-sign"></i></span></p>
                 <p style="color: red
-                ;"><a>ازالة</a></p>
+                ;"><button>ازالة</button></p>
             </div>
             </div>
           </div>
@@ -210,7 +210,7 @@
                 <p>15 <span><i class="fas fa-solid fa-eye"></i></span> </p> 
               <p>15 <span><i class="fas fa-solid fa-shekel-sign"></i></span></p>
                 <p style="color: red
-                ;"><a>ازالة</a></p>
+                ;"><button>ازالة</button></p>
             </div>
             </div>
           </div>
@@ -222,7 +222,7 @@
                 <p>15 <span><i class="fas fa-solid fa-eye"></i></span> </p> 
               <p>15 <span><i class="fas fa-solid fa-shekel-sign"></i></span></p>
                 <p style="color: red
-                ;"><a>ازالة</a></p>
+                ;"><button>ازالة</button></p>
             </div>
             </div>
           </div>
