--- a/AdminHome.html
+++ b/AdminHome.html
@@ -125,7 +125,8 @@
               <p>15 <span><i class="fas fa-solid fa-eye"></i></span> </p> 
               <p>15 <span><i class="fas fa-solid fa-shekel-sign"></i></span></p>
                 <p style="color: red
-                ;"><button>ازالة</button></p>
+                ;"><button style="background-color: red
+                ;">ازالة</button></p>
     
             </div>
           </div>
@@ -138,7 +139,8 @@
               <p>15 <span><i class="fas fa-solid fa-eye"></i></span> </p> 
               <p>15 <span><i class="fas fa-solid fa-shekel-sign"></i></span></p>
                 <p style="color: red
-                ;"><button>ازالة</button></p>
+                ;"><button style="background-color: red
+                ;">ازالة</button></p>
             </div>
           </div>
         </div>
@@ -150,7 +152,8 @@
               <p>15 <span><i class="fas fa-solid fa-eye"></i></span> </p> 
               <p>15 <span><i class="fas fa-solid fa-shekel-sign"></i></span></p>
                 <p style="color: red
-                ;"><button>ازالة</button></p>
+                ;"><button style="background-color: red
+                ;">ازالة</button></p>
             </div>
           </div>
         </div>
@@ -162,7 +165,8 @@
               <p>15 <span><i class="fas fa-solid fa-eye"></i></span> </p> 
               <p>15 <span><i class="fas fa-solid fa-shekel-sign"></i></span></p>
                 <p style="color: red
-                ;"><button>ازالة</button></p>
+                ;"><button style="background-color: red
+                ;">ازالة</button></p>
             </div>
           </div>
         </div>
@@ -174,7 +178,8 @@
                 <p>15 <span><i class="fas fa-solid fa-eye"></i></span> </p> 
                 <p>15 <span><i class="fas fa-solid fa-shekel-sign"></i></span></p>
                   <p style="color: red
-                  ;"><button>ازالة</button></p>
+                  ;"><button style="background-color: red
+                  ;">ازالة</button></p>
              </div>
             </div>
           </div>
@@ -186,7 +191,8 @@
                 <p>15 <span><i class="fas fa-solid fa-eye"></i></span> </p> 
                 <p>15 <span><i class="fas fa-solid fa-shekel-sign"></i></span></p>
                   <p style="color: red
-                  ;"><button>ازالة</button></p>
+                  ;"><button style="background-color: red
+                  ;">ازالة</button></p>
             </div>
             </div>
           </div>
@@ -198,7 +204,8 @@
                 <p>15 <span><i class="fas fa-solid fa-eye"></i></span> </p> 
               <p>15 <span><i class="fas fa-solid fa-shekel-sign"></i></span></p>
                 <p style="color: red
-                ;"><button>ازالة</button></p>
+                ;"><button style="background-color: red
+                ;">ازالة</button></p>
             </div>
             </div>
           </div>
@@ -210,7 +217,8 @@
                 <p>15 <span><i class="fas fa-solid fa-eye"></i></span> </p> 
               <p>15 <span><i class="fas fa-solid fa-shekel-sign"></i></span></p>
                 <p style="color: red
-                ;"><button>ازالة</button></p>
+                ;"><button style="background-color: red
+                ;">ازالة</button></p>
             </div>
             </div>
           </div>
@@ -222,7 +230,8 @@
                 <p>15 <span><i class="fas fa-solid fa-eye"></i></span> </p> 
               <p>15 <span><i class="fas fa-solid fa-shekel-sign"></i></span></p>
                 <p style="color: red
-                ;"><button>ازالة</button></p>
+                ;"><button style="background-color: red
+                ;">ازالة</button></p>
             </div>
             </div>
           </div>
