--- a/RemovefromCart.html
+++ b/RemovefromCart.html
@@ -71,7 +71,7 @@
               <div class="col-lg-6">
                 <div class="itemsDiv">
                     <h5 class="card-title">كيلو خضراوات وفواكة</h5> 
-                    <p class="STars"><i class="fas fa-solid fa-star-half"></i> <i class="fas fa-solid fa-star"></i> <i class="fas fa-solid fa-star"></i> <i class="fas fa-solid fa-star"></i> <i class="fas fa-solid fa-star"></i> <a class="Rating" href="">تقييم:4.7</a></p> 
+                    <p class="STars"><i class="fas fa-solid fa-star-half"></i> <i class="fas fa-solid fa-star"></i> <i class="fas fa-solid fa-star"></i> <i class="fas fa-solid fa-star"></i> <i class="fas fa-solid fa-star"></i> <a class="Rating" href="Rating.html">تقييم:4.7</a></p> 
                     <p> السعر: <del>30₪</del></p>
                     <p style="color: red;"> السعر بعد الخصم:10₪ </p><br>
                     <p> الكمية : <input class="AddNumber"  type="number" readonly></p>     <!-- readonly readonly readonly readonly -->
