--- a/Pay.html
+++ b/Pay.html
@@ -28,23 +28,16 @@
                   <a class="nav-link active" aria-current="page" href="Homeslider.html">الرئيسية</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href=" Talabaty.html">طلباتي</a>
+                  <a class="nav-link"  href=" Talabaty.html">طلباتي</a>
                 </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#"> </a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">   </a>
-                </li>
+                
                 <ll class="nav-item"><a class="nav-link" href="fav.html"><i class="fas fa-solid fa-heart"> المفضلة </i></a></ll>
-                <ll class="nav-item"><a class="nav-link" href="ShopingCart.html"><i class="fa fa-cart-plus fa-2x">  عربة التسوق </i> </a></ll>
-                <li class="nav-item"><a class="nav-link" href="#" ><i class="fas fa-sign-out-alt fa-lg"></i></a>
-                    <div class="input-group rounded">
-                    <input type="search" class="form-control rounded" placeholder="بحث" aria-label="Search" aria-describedby="search-addon" />
-                    <span class="input-group-text border-0" id="search-addon">
-                      <i class="fas fa-search"></i>
-                    </span>
-                  </div>
+                <ll class="nav-item"><a class="nav-link" href="ShopingCart.html">عربة التسوق <i class="fa fa-cart-plus fa-2x"> </i>  </a></ll>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">
+                      <i class="fas fa-user-circle fa-lg"> Taher</i>
+                    </a>
+                  </li>                     
                 </li>
               </ul>
           </div>
@@ -60,7 +53,7 @@
                 <div class="card-header">
                     <div class="bg-white shadow-sm pt-4 pl-2 pr-2 pb-2">
                         <!-- Credit card form tabs -->
-                        <ul role="tablist" class="nav bg-light nav-pills rounded nav-fill mb-3">
+                        <ul style="list-style:none ;" class=" bg-light nav-pills rounded nav-fill mb-3">
                             <li class="nav-item"> <a data-toggle="pill" href="#credit-card" class="nav-link active "> <i class="fas fa-credit-card mr-2"  ></i> فيزا كارد </a> </li>
                             <li class="nav-item"> <a data-toggle="pill" href="#paypal" class="nav-link "> <i class="fab fa-paypal mr-2"></i>    محفظة جوال </a> </li>
                             <li class="nav-item"> <a data-toggle="pill" href="#net-banking" class="nav-link "> <i class="fas fa-mobile-alt mr-2"></i> تسليم باليد </a> </li>
@@ -99,36 +92,7 @@
                             </form>
                         </div>
                     </div> <!-- End -->
-                    <!-- Paypal info -->
-                    <div id="paypal" class="tab-pane fade pt-3">
-                        <h6 class="pb-2">Select your paypal account type</h6>
-                        <div class="form-group "> <label class="radio-inline"> <input type="radio" name="optradio" checked> Domestic </label> <label class="radio-inline"> <input type="radio" name="optradio" class="ml-5">International </label></div>
-                        <p> <button type="button" class="btn btn-primary "><i class="fab fa-paypal mr-2"></i> Log into my Paypal</button> </p>
-                        <p class="text-muted"> Note: After clicking on the button, you will be directed to a secure gateway for payment. After completing the payment process, you will be redirected back to the website to view details of your order. </p>
-                    </div> <!-- End -->
-                    <!-- bank transfer info -->
-                    <div id="net-banking" class="tab-pane fade pt-3">
-                        <div class="form-group "> <label for="Select Your Bank">
-                                <h6>Select your Bank</h6>
-                            </label> <select class="form-control" id="ccmonth">
-                                <option value="" selected disabled>--Please select your Bank--</option>
-                                <option>Bank 1</option>
-                                <option>Bank 2</option>
-                                <option>Bank 3</option>
-                                <option>Bank 4</option>
-                                <option>Bank 5</option>
-                                <option>Bank 6</option>
-                                <option>Bank 7</option>
-                                <option>Bank 8</option>
-                                <option>Bank 9</option>
-                                <option>Bank 10</option>
-                            </select> </div>
-                        <div class="form-group">
-                            <p> <button type="button" class="btn btn-primary "><i class="fas fa-mobile-alt mr-2"></i> Proceed Payment</button> </p>
-                        </div>
-                        <p class="text-muted">Note: After clicking on the button, you will be directed to a secure gateway for payment. After completing the payment process, you will be redirected back to the website to view details of your order. </p>
-                    </div> <!-- End -->
-                    <!-- End -->
+                  
                 </div>
             </div>
         </div>
