--- a/ShopingCart.html
+++ b/ShopingCart.html
@@ -5,7 +5,7 @@
    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="css/all.min.css">
-    <title>Table 3</title>
+    <title>ShopingCart</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap" rel="stylesheet">
@@ -31,23 +31,16 @@
               <a class="nav-link active" aria-current="page" href="Homeslider.html">الرئيسية</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href=" Talabaty.html">طلباتي</a>
+              <a class="nav-link"  href=" Talabaty.html">طلباتي</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#"> </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">   </a>
-            </li>
+            
             <ll class="nav-item"><a class="nav-link" href="fav.html"><i class="fas fa-solid fa-heart"> المفضلة </i></a></ll>
-            <ll class="nav-item"><a class="nav-link" href="ShopingCart.html"><i class="fa fa-cart-plus fa-2x TaHer">  عربة التسوق </i> </a></ll>
-            <li class="nav-item"><a class="nav-link" href="#" ><i class="fas fa-sign-out-alt fa-lg"></i></a>
-                <div class="input-group rounded">
-                <input type="search" class="form-control rounded" placeholder="بحث" aria-label="Search" aria-describedby="search-addon" />
-                <span class="input-group-text border-0" id="search-addon">
-                  <i class="fas fa-search"></i>
-                </span>
-              </div>
+            <ll class="nav-item"><a class="nav-link" href="ShopingCart.html">عربة التسوق <i class="fa fa-cart-plus fa-2x"> </i>  </a></ll>
+            <li class="nav-item">
+                <a class="nav-link" href="#">
+                  <i class="fas fa-user-circle fa-lg"> Taher</i>
+                </a>
+              </li>                     
             </li>
           </ul>
       </div>
@@ -55,7 +48,8 @@
   </nav>
   <!-- **************** -->
   <section class="Table3">
-  <div class="container">
+    <div class="container">
+       
    
     <table class="table">
         <thead>
@@ -100,7 +94,7 @@
               <h5 class="card-title">ملخص الطلب</h5>
               <p class="card-text">المجموع النهائي:₪100 </p>
               <a  href="Homeslider.html"><button class="row-BTN"> متابعة التسوق </button></a> <br>
-              <a  href="Pay.html"><button class="row-BTN2">  اتمام عملية الشراء  </button></a>
+              <a  href="PayDone.html"><button class="row-BTN2">  اتمام عملية الشراء  </button></a>
             </div>
           </div>
         </div>
