--- a/Talabaty.html
+++ b/Talabaty.html
@@ -28,23 +28,16 @@
               <a class="nav-link active" aria-current="page" href="Homeslider.html">الرئيسية</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">طلباتي</a>
+              <a class="nav-link"  href=" Talabaty.html">طلباتي</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#"> </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">   </a>
-            </li>
+            
             <ll class="nav-item"><a class="nav-link" href="fav.html"><i class="fas fa-solid fa-heart"> المفضلة </i></a></ll>
-            <ll class="nav-item"><a class="nav-link" href="ShopingCart.html"><i class="fa fa-cart-plus fa-2x">  عربة التسوق </i> </a></ll>
-            <li class="nav-item"><a class="nav-link" href="#" ><i class="fas fa-sign-out-alt fa-lg"></i></a>
-                <div class="input-group rounded">
-                <input type="search" class="form-control rounded" placeholder="بحث" aria-label="Search" aria-describedby="search-addon" />
-                <span class="input-group-text border-0" id="search-addon">
-                  <i class="fas fa-search"></i>
-                </span>
-              </div>
+            <ll class="nav-item"><a class="nav-link" href="ShopingCart.html">عربة التسوق <i class="fa fa-cart-plus fa-2x"> </i>  </a></ll>
+            <li class="nav-item">
+                <a class="nav-link" href="#">
+                  <i class="fas fa-user-circle fa-lg"> Taher</i>
+                </a>
+              </li>                     
             </li>
           </ul>
       </div>
@@ -53,12 +46,9 @@
   <!-- **************** -->
   <section class="Table2">
   <div class="container">
-    <!--   <div class="form-outline mb-4">
-        <input type="search" class="form-control" placeholder="Search" id="datatable-search-input">
-        <div class="px-2"> <span>Filters <i class="fa fa-angle-down"></i></span> <i class="fa fa-ellipsis-h ms-3"></i> </div>
-      </div> -->
+
           <div class="mb-2 d-flex justify-content-between align-items-center Table2Right">
-        <div class="position-relative"> <span class="position-absolute search"><i class="fa fa-search"></i></span> <input class="form-control w-100" placeholder=" Search for order "> </div>
+        <div class="position-relative"> <span class="position-absolute search"><i class="fa fa-search"></i></span> <input class="form-control w-100" placeholder=" بحث "> </div>
         <div class="px-2"> <span>تصنيف<i class="fa fa-angle-down"></i></span> <i class="fa fa-ellipsis-h ms-3"></i> </div>
     </div>   
 
