--- a/privcySale.html
+++ b/privcySale.html
@@ -23,22 +23,25 @@
         </div>
     
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"> </span>
+        <span class="navbar-toggler-icon">  </span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
  
             <li class="nav-item">
-              <a class="nav-link" href="#">منتجاتي</a>
+              <a class="nav-link" href="Admin-montagaty.html">منتجاتي</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">المبيعات</a>
+              <a class="nav-link" href="mbeat.html">المبيعات</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">لوحة التحكم</a>
+              <a class="nav-link" href="AdminHome.html">لوحة التحكم</a>
             </li>
-           
-            <li class="nav-item"><a class="nav-link" href="#" ><i class="fas fa-sign-out-alt fa-lg"></i></a></li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">
+                <i class="fas fa-user-circle fa-lg"> Taher</i>
+              </a>
+            </li>
           </ul>
       </div>
     </div>
