--- a/Delivery.Map.html
+++ b/Delivery.Map.html
@@ -28,16 +28,16 @@
               <a class="nav-link" href="Delivery.Table.html">الرئيسية</a>
             </li>
              
-           <li class="nav-item"><a class="nav-link" href="#" ><i class="fas fa-sign-out-alt fa-lg"></i></a>
-                
+            <li class="nav-item">
+              <a class="nav-link" href="#">
+                <i class="fas fa-user-circle fa-lg"> Taher</i>
+              </a>
             </li>
           </ul>
       </div>
     </div>
   </nav>
 <!-- ********************** -->
- 
- 
     <div class="wrapper">
         <div class="overlayx">
             <div class="row d-flex justify-content-center align-items-center">
