--- a/PayDone.html
+++ b/PayDone.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="css/queerryy.css">
 </head>
 <body>
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+ <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
         <div><a class="navbar-brand" href="#">
             <img src="imag/Sallah1r.png" alt="" width="30" height="24" class="d-inline-block align-text-top"> 
@@ -27,23 +27,16 @@
               <a class="nav-link active" aria-current="page" href="Homeslider.html">الرئيسية</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href=" Talabaty.html">طلباتي</a>
+              <a class="nav-link"  href=" Talabaty.html">طلباتي</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#"> </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">   </a>
-            </li>
+            
             <ll class="nav-item"><a class="nav-link" href="fav.html"><i class="fas fa-solid fa-heart"> المفضلة </i></a></ll>
-            <ll class="nav-item"><a class="nav-link" href="ShopingCart.html"><i class="fa fa-cart-plus fa-2x">  عربة التسوق </i> </a></ll>
-            <li class="nav-item"><a class="nav-link" href="#" ><i class="fas fa-sign-out-alt fa-lg"></i></a>
-                <div class="input-group rounded">
-                <input type="search" class="form-control rounded" placeholder="بحث" aria-label="Search" aria-describedby="search-addon" />
-                <span class="input-group-text border-0" id="search-addon">
-                  <i class="fas fa-search"></i>
-                </span>
-              </div>
+            <ll class="nav-item"><a class="nav-link" href="ShopingCart.html">عربة التسوق <i class="fa fa-cart-plus fa-2x"> </i>  </a></ll>
+            <li class="nav-item">
+                <a class="nav-link" href="#">
+                  <i class="fas fa-user-circle fa-lg"> Taher</i>
+                </a>
+              </li>                     
             </li>
           </ul>
       </div>
@@ -61,14 +54,14 @@
         <div class="col-lg-6 mx-auto">
             <div class="card ">
                 <div class="card-header">
-                    <div class="bg-white shadow-sm pt-4 pl-2 pr-2 pb-2">
-                        <!-- Credit card form tabs -->
+                    <!-- <div class="bg-white shadow-sm pt-4 pl-2 pr-2 pb-2">
+                        <!-- Credit card form tabs 
                         <ul role="tablist" class="nav bg-light nav-pills rounded nav-fill mb-3">
                             <li class="nav-item"> <a data-toggle="pill" href="#credit-card" class="nav-link   "> <i class="fas fa-credit-card mr-2" style="color: black;"></i> فيزا كارد </a> </li>
                             <li class="nav-item"> <a data-toggle="pill" href="#paypal" class="nav-link "> <i class="fab fa-paypal mr-2"></i>    محفظة جوال </a> </li>
                             <li class="nav-item"> <a data-toggle="pill" href="#net-banking" class="nav-link active "> <i class="fas fa-mobile-alt mr-2"></i> تسليم باليد </a> </li>
                         </ul>
-                    </div> <!-- End -->
+                    </div> End -->
                     <!-- Credit card form content -->
                     <div class="tab-content">
                         <!-- credit card info-->
