--- a/Rating.html
+++ b/Rating.html
@@ -27,23 +27,16 @@
                   <a class="nav-link active" aria-current="page" href="Homeslider.html">الرئيسية</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href=" Talabaty.html">طلباتي</a>
+                  <a class="nav-link"  href=" Talabaty.html">طلباتي</a>
                 </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#"> </a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">   </a>
-                </li>
+                
                 <ll class="nav-item"><a class="nav-link" href="fav.html"><i class="fas fa-solid fa-heart"> المفضلة </i></a></ll>
-                <ll class="nav-item"><a class="nav-link" href="ShopingCart.html"><i class="fa fa-cart-plus fa-2x TaHer">  عربة التسوق </i> </a></ll>
-                <li class="nav-item"><a class="nav-link" href="#" ><i class="fas fa-sign-out-alt fa-lg"></i></a>
-                    <div class="input-group rounded">
-                    <input type="search" class="form-control rounded" placeholder="بحث" aria-label="Search" aria-describedby="search-addon" />
-                    <span class="input-group-text border-0" id="search-addon">
-                      <i class="fas fa-search"></i>
-                    </span>
-                  </div>
+                <ll class="nav-item"><a class="nav-link" href="ShopingCart.html">عربة التسوق <i class="fa fa-cart-plus fa-2x"> </i>  </a></ll>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">
+                      <i class="fas fa-user-circle fa-lg"> Taher</i>
+                    </a>
+                  </li>                     
                 </li>
               </ul>
           </div>
@@ -52,6 +45,7 @@
 <!-- ********************** -->
 <section class="Rating">
       <div class="container">
+          
         <div class="container-fluid px-1 py-5 mx-auto">
             <div class="row justify-content-center">
                 <div class="col-xl-7 col-lg-8 col-md-10 col-12 text-center mb-5">
