--- a/privcycustom.html
+++ b/privcycustom.html
@@ -23,31 +23,24 @@
         </div>
     
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"> </span>
+        <span class="navbar-toggler-icon">  </span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+ 
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="Homeslider.html">الرئيسية</a>
+              <a class="nav-link" href="Admin-montagaty.html">منتجاتي</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href=" Talabaty.html">طلباتي</a>
+              <a class="nav-link" href="mbeat.html">المبيعات</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#"> </a>
+              <a class="nav-link" href="AdminHome.html">لوحة التحكم</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">   </a>
-            </li>
-            <ll class="nav-item"><a class="nav-link" href="fav.html"><i class="fas fa-solid fa-heart"> المفضلة </i></a></ll>
-            <ll class="nav-item"><a class="nav-link" href="ShopingCart.html"><i class="fa fa-cart-plus fa-2x TaHer">  عربة التسوق </i> </a></ll>
-            <li class="nav-item"><a class="nav-link" href="#" ><i class="fas fa-sign-out-alt fa-lg"></i></a>
-                <div class="input-group rounded">
-                <input type="search" class="form-control rounded" placeholder="بحث" aria-label="Search" aria-describedby="search-addon" />
-                <span class="input-group-text border-0" id="search-addon">
-                  <i class="fas fa-search"></i>
-                </span>
-              </div>
+              <a class="nav-link" href="#">
+                <i class="fas fa-user-circle fa-lg"> Taher</i>
+              </a>
             </li>
           </ul>
       </div>
